feat: added some tests